--- a/client/src/components/ODSManager.css
+++ b/client/src/components/ODSManager.css
@@ -47,8 +47,9 @@
   z-index: 1000;
   min-width: 400px;
   max-width: 500px;
-  max-height: 500px;
+  max-height: 70vh;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .ods-dropdown-header {
@@ -61,6 +62,26 @@
 
 .ods-dropdown-list {
   padding: 0.5rem;
+  max-height: calc(70vh - 60px);
+  overflow-y: auto;
+}
+
+.ods-dropdown-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.ods-dropdown-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.ods-dropdown-list::-webkit-scrollbar-thumb {
+  background: #235795;
+  border-radius: 4px;
+}
+
+.ods-dropdown-list::-webkit-scrollbar-thumb:hover {
+  background: #1a4270;
 }
 
 .ods-dropdown-item {
